add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-
+      <title>Katrice's website</title>
     </head>
 
     <body>
-
+       <!-- Visible HTML elements GO HERE  -->
+       <main>
+        <!-- Sidebar section -->
+        <div>
+  
+        </div>
+  
+        <!-- Content section -->
+        <div>
+        <h2>Katrice</h2>
+        <p>Student at Abramson Sci Academy</p>
+        <!-- Interests section -->
+        <div>
+          <h3>Interests</h3>
+          <ul>
+              <li>Band</li>
+              <li>Watching tv</li>
+              <li></li>
+          </ul>
+      </div>
+        </div>
+    </main>
     </body>
 </html>
