add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,31 +1,46 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-    <head>
-      <title>Katrice's website</title>
-    </head>
+  <head>
+    <title>Katrice's website</title>
+    <link rel="stylesheet" href="style.css">
+    
+  </head>
 
-    <body>
-       <!-- Visible HTML elements GO HERE  -->
-       <main>
-        <!-- Sidebar section -->
-        <div>
-  
-        </div>
-  
-        <!-- Content section -->
-        <div>
+  <body>
+    <!-- Visible HTML elements GO HERE  -->
+     <div id="all-contents">
+    <nav>
+      <h1>Katrice's Website</h1>
+      <ul id="nav-ul">
+        <li class="nav-ul">
+          <a href="index.html"> Home </a>
+        </li>
+        <li>
+          <a href="portfolio.html"> Portfolio </a>
+        </li>
+      </ul>
+    </nav>
+    <main>
+      <!-- Sidebar section -->
+
+      <div id="all-contents">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsFRVtdxVA6odiy3FMDh-bbv5NT7YzQEYR2w&s"/>
+        
+      </div>
+      <!-- Content section -->
+      <div>
         <h2>Katrice</h2>
         <p>Student at Abramson Sci Academy</p>
         <!-- Interests section -->
         <div>
           <h3>Interests</h3>
           <ul>
-              <li>Band</li>
-              <li>Watching tv</li>
-              <li></li>
+            <li>Playing trumpet</li>
+            <li>Watching tv</li>
+            <li>Coding</li>
           </ul>
-      </div>
         </div>
+      </div>
     </main>
-    </body>
+  </body>
 </html>
