--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
       <main>
         <!-- Sidebar section -->
         <div id="all-contents">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsFRVtdxVA6odiy3FMDh-bbv5NT7YzQEYR2w&s">
-        </div>
-        <!-- Content section -->
-        <div class="content">
-          <h2>Katrice</h2>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREwcngmeXKc7kLPc3bvlF9UT4r_wmb_Egvxw&amp;s" alt="Evil Dog Head, Reduced Design, red and ..."/>
           <p>Student at Abramson Sci Academy</p>
           <!-- Interests section -->
           <div id="interest">
