addindex.html finish project

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <!-- Sidebar section -->
         <div id="all-contents">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREwcngmeXKc7kLPc3bvlF9UT4r_wmb_Egvxw&amp;s" alt="Evil Dog Head, Reduced Design, red and ..."/>
+        </div>
+        <div>
+          <h2>Katrice</h2>
           <p>Student at Abramson Sci Academy</p>
           <!-- Interests section -->
           <div id="interest">
@@ -33,6 +36,7 @@
               <li>Coding</li>
             </ul>
           </div>
+        </div>
         </div>
       </main>
     </div>
