add index.html and css files

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
       <main>
         <!-- Sidebar section -->
         <div id="all-contents">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREwcngmeXKc7kLPc3bvlF9UT4r_wmb_Egvxw&amp;s" alt="Evil Dog Head, Reduced Design, red and ..."/>
-        </div>
-        <div>
+            <img src="https://media.tenor.com/W8bYqca_QdQAAAAj/ying-yang-red-black.gif" alt="a red and black yin yang symbol with a red dot in the middle"/>
+            
           <h2>Katrice</h2>
           <p>Student at Abramson Sci Academy</p>
           <!-- Interests section -->
@@ -34,6 +33,8 @@
               <li>Playing trumpet</li>
               <li>Watching tv</li>
               <li>Coding</li>
+              
+              <img id="divider" src="https://media.tenor.com/kHCz3Vrz03EAAAAj/red-divider.gif" alt="a white background with a red border that says &#39; &#39; on it"/>
             </ul>
           </div>
         </div>
