--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,10 @@
         <title>Katrice's website</title>
         <link rel="stylesheet"href="style.css">
     </head>
-
-    <body>
-      <div id="all-contents">
+     <body>
+        <div id="all-contents">
+        <img src="https://media.tenor.com/PjiakZ3Ogf0AAAAM/warning-black.gif" alt="the word warning is glowing brightly in red on a black background"/>
+        <img src="https://media.tenor.com/W8bYqca_QdQAAAAj/ying-yang-red-black.gif" alt="a red and black yin yang symbol with a red dot in the middle"/>
         <nav>
             <h1>Katrice's website</h1>
             <ul id="nav-ul">
@@ -17,6 +18,7 @@
                     <a class="nav-a" href="portfolio.html">Portfolio</a>
                 </li>
             </ul>
+            <img src="https://media.tenor.com/PjiakZ3Ogf0AAAAM/warning-black.gif" alt="the word warning is glowing brightly in red on a black background"/>
         </nav>
         <main>
             <div class="content">
@@ -25,11 +27,8 @@
                     <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
                     <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
                     <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
-
-                </ul>
+                    </div>
+                </main>
             </div>
-        </main>
-    
-      </div>
-    </body>
-</html>
+        </body>
+        </html>
