--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -18,6 +18,7 @@
 			top: 100px;
 			/* Change me! */
 			left: 0px;
+			
 		}
 
 		.board {
@@ -66,7 +67,7 @@
 			//////////////////////////////////////////////////////////////////
 
 			// TODO 2 - Variable declarations 
-
+			var positionX = 0;
 
 
 			/* 
@@ -75,9 +76,11 @@
 			turn it around! 
 			*/
 			function update() {
-
-
-			};
+				 /* Your Code to Increase positionX by 10 HERE */
+				 positionX = positionX+ 10;
+				 moveBoxTo(positionX);
+				};
+			
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
