--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -68,6 +68,7 @@
 
 			// TODO 2 - Variable declarations 
 			var positionX = 0;
+			var points = 0;
 
 
 			/* 
@@ -88,6 +89,10 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
+			positionX=0;
+			// your code to increase the points variable by 1
+			changeBoxText(points);
+			points=points+1
 
 
 			};
