--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -69,7 +69,7 @@
 			// TODO 2 - Variable declarations 
 			var positionX = 0;
 			var points = 0;
-
+			var speed=10;
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -78,8 +78,9 @@
 			*/
 			function update() {
 				 /* Your Code to Increase positionX by 10 HERE */
-				 positionX = positionX+ 10;
+				 positionX = positionX+ speed;
 				 moveBoxTo(positionX);
+				 
 				};
 			
 
@@ -90,9 +91,12 @@
 			*/
 			function handleBoxClick() {
 			positionX=0;
+			points=points+1;
+			speed=speed+3;
 			// your code to increase the points variable by 1
 			changeBoxText(points);
-			points=points+1
+			
+
 
 
 			};
