--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -6,6 +6,10 @@
 	<title>Bouncing Box</title>
 	<script src="jquery.min.js"></script>
 	<style>
+		body {
+  background-image: url("https://upload.wikimedia.org/wikipedia/en/9/9f/Feeder_-_Black-Red_album_cover.webp");
+  
+}
 		.box {
 			width: 70px;
 			height: 70px;
@@ -23,6 +27,7 @@
 
 		.board {
 			height: 100vh;
+			width: 215vh;
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -45,6 +50,7 @@
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
+			
 
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
@@ -55,6 +61,7 @@
 			// moves the Box to a new position on the screen along the X-Axis
 			function moveBoxTo(newPositionX) {
 				box.css("left", newPositionX);
+				
 			}
 
 			// changes the text displayed on the Box
@@ -70,6 +77,7 @@
 			var positionX = 0;
 			var points = 0;
 			var speed=10;
+			
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -80,8 +88,15 @@
 				 /* Your Code to Increase positionX by 10 HERE */
 				 positionX = positionX+ speed;
 				 moveBoxTo(positionX);
+				 if(positionX > boardWidth){
+					speed = -speed;
+				 }
+					if(positionX < 0){
+					speed = -speed;
+				 }
 				 
-				};
+			}
+			
 			
 
 			/* 
@@ -95,9 +110,6 @@
 			speed=speed+3;
 			// your code to increase the points variable by 1
 			changeBoxText(points);
-			
-
-
 
 			};
 
